# ai-trainer

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run_ingestion.py
.claude/: settings.local.json
.github/workflows/: verify-mobile-app.yml
audits/: assert_positive_strength_metrics.sql  assert_reasonable_cardio_efficiency.sql  assert_unique_training_date.sql
dashboard/: .gitignore  evidence.config.yaml  package.json  vercel.json
dashboard/pages/: cardio.md  index.md  strength.md
dashboard/sources/fitness/: activity_log.sql  cardio_efficiency.sql  cardio_trends.sql  connection.yaml  strength_progression.sql  strength_trends.sql  training_load.sql  weekly_fitness.sql
ingestion/: __init__.py  auth.py  hevy_source.py  strava_source.py
mobile-app/: AGENTS.md  README.md  package-lock.json  package.json
mobile-app/public/: manifest.json
mobile-app/public/data/: activity_log.json  cardio_efficiency.json  strength_progression.json  workout_details.json
mobile-app/src/: proxy.ts
mobile-app/src/app/: globals.css  layout.tsx  page.tsx
mobile-app/src/components/: activity-badge.tsx  app-shell.tsx  day-activity-list.tsx  exercise-progression.tsx  monthly-calendar.tsx  theme-toggle.tsx  workout-detail.tsx
models/marts/: mart_activity_log.sql  mart_cardio_trends.sql  mart_strength_trends.sql  mart_weekly_fitness_summary.sql
models/staging/: stg_hevy_exercise_templates.sql  stg_hevy_sets.sql  stg_strava_activities.sql  stg_strava_athlete.sql
orchestration/: __init__.py  definitions.py
scripts/: export_data.py
(+8 files in other folders)
